changes made to documentation
